docs: update README